--- a/frontend/task5/index.html
+++ b/frontend/task5/index.html
@@ -23,94 +23,111 @@
                 class="col-sm-12 col-md-12 col-xl-8 col-xl-12 col-xxl-12 bg-white shadow-xxl rounded-3 d-flex justify-content-md-center justify-content-center">
                 <div class="row">
                     <div
-                        class="col-sm-12  col-md-3  p-md-0 col-xxl-3 bg-white rounded-3 d-flex justify-content-sm-center align-items-center justify-content-center">
+                        class="col-sm-12  col-md-4  p-md-0 col-xxl-3 bg-white rounded-3 d-flex justify-content-sm-center align-items-center justify-content-center">
                         <img class="posepic" src="./asset/photo.jpg" alt="posepic">
                     </div>
-                    <div class="col-md-9 col-xxl-9">
+                    <div class="col-md-8 col-xxl-9">
                         <div class="container-md container-xxl">
                             <div class="row justify-content-center pt-lg-2 pt-xl-2 pt-xxl-2 ">
                                 <p class=" text-center">Register Yoga class</p>
                             </div>
-                            <div class="row col-sm-12">
+                            <form onsubmit="handleForm(event)">
 
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="text" class="form-control" placeholder="Enter your Name">
+                                <div class="row col-sm-12">
+
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="text" class="form-control" id="name"
+                                                        placeholder="Enter your Name">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="number" pattern="/^-?\d+\.?\d*$/"
+                                                        onKeyPress="if(this.value.length==10) return false;" id="age"
+                                                        class="form-control" required id="phoneNumber"
+                                                        placeholder="Enter the mobile Number">
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="tel" class="form-control"
-                                                    placeholder="Enter mobile number">
+                                        <div class="row">
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="email" id="email" class="form-control"
+                                                        placeholder="Enter your Email" required>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <select class="form-control" id="selectState" required>
+                                                        <option selected>Choose State</option>
+                                                        <option>Karnataka</option>
+                                                        <option>Andhra</option>
+                                                        <option>Kerala</option>
+                                                        <option>Tamil Nadu</option>
+                                                    </select>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+
+                                                    <input type="password" placeholder="Enter your password" required
+                                                        id="upassword" class="form-control"
+                                                        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                                                        title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="password" class="form-control" required
+                                                        id="confirmPassword" placeholder="Enter the confirm password">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="number" pattern="/^-?\d+\.?\d*$/"
+                                                        onKeyPress="if(this.value.length==2) return false;" id="age"
+                                                        class="form-control" required id="age"
+                                                        placeholder="Enter your age">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="date" id="dob" class="form-control" id="dob"
+                                                        min="1980-01-01" required>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="form-group mt-4">
+                                                    <input type="file" class="form-control-file" id="fileupload"
+                                                        required onchange="upload()">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xxl-6">
+                                                <div class="preview-image mt-4">
+                                                    <img id="preview" src="#" alt="Preview" style="width: 20%; ">
+                                                </div>
+                                                <div id="fileerr" class="mt-2 text-danger"></div>
+                                            </div>
+                                        </div>
+
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="email" class="form-control" placeholder="Enter your Email">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <select class="form-control">
-                                                    <option selected>Choose State</option>
-                                                    <option>Karnataka</option>
-                                                    <option>Andhra</option>
-                                                    <option>Kerala</option>
-                                                    <option>Tamil Nadu</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="password" class="form-control"
-                                                    placeholder="Enter the password">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="password" class="form-control"
-                                                    placeholder="Enter the confirm password">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="number" id="age" class="form-control"
-                                                    placeholder="Enter your age">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="date" class="form-control" id="dob" min="1980-01-01">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="form-group mt-4">
-                                                <input type="file" class="form-control-file" id="fileInput">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 col-xxl-6">
-                                            <div class="preview-image mt-4">
-                                                <img id="preview" src="#" alt="Preview"
-                                                    style="max-width: 100%; height: auto;">
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </div>
 
-                            </div>
-                            <div class="row w-25 d-lg-flex container-lg justify-content-lg-end p-4">
-                                <button class=" btn btn-primary" type="button">Submit</button>
-                            </div>
+                                <div class="row w-50 d-lg-flex container-lg justify-content-lg-end p-4">
+                                    <button class=" btn btn-primary" type="submit">Submit</button>
+                                </div>
+
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -119,6 +136,30 @@
     </div>
 
     <script>
+        function handleForm(e) {
+            let finalPass = "";
+            e.preventDefault();
+            let userData = {};
+            userData.name = document.getElementById('name').value;
+            userData.phoneNumber = document.getElementById('phoneNumber').value;
+            userData.email = document.getElementById('email').value;
+            userData.selectState = document.getElementById('selectState').value;
+            userData.upassword = document.getElementById('upassword').value;
+            userData.confirmPassword = document.getElementById('confirmPassword').value;
+            userData.age = document.getElementById('age').value;
+            userData.dob = document.getElementById('dob').value;
+            if (upassword.value === confirmPassword.value) {
+                finalPass = upassword;
+            } else {
+                alert("Try again, password is not matching")
+            }
+            if (userData.name === '' || userData.phoneNumber === '' || userData.email === '' ||
+                userData.selectState === '' || userData.upassword === '' ||
+                userData.confirmPassword === '' || userData.age === '' || userData.dob === '') {
+                alert('Please fill out all fields');
+                return;
+            } console.log(finalPass.value);
+        }
         var inputAge = document.getElementById('age');
         inputAge.onkeydown = function (event) {
             if (isNaN(event.key) && event.key !== 'Backspace') {
@@ -127,6 +168,38 @@
         };
         let today = new Date().toISOString().slice(0, 10);
         document.getElementById("dob").max = today;
+
+        function upload() {
+            const fileUploadInput = document.getElementById('fileupload');
+            const previewImage = document.getElementById('preview');
+            const fileError = document.getElementById('fileerr');
+
+            if (fileUploadInput.files && fileUploadInput.files[0]) {
+                const file = fileUploadInput.files[0];
+
+                if (file.type.startsWith('image/')) {
+                    const reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        previewImage.src = e.target.result;
+                        fileError.textContent = '';
+
+
+                        // console.log(e.target.result);
+                    };
+
+                    reader.readAsDataURL(file);
+                } else {
+                    fileError.textContent = 'Please select an image file (png, jpg, jpeg).';
+                    previewImage.src = '';
+                }
+            } else {
+                fileError.textContent = 'Please select a file.';
+                previewImage.src = '';
+            }
+        }
+
+
     </script>
 
 </body>
