--- a/frontend/task3-copy/index.html
+++ b/frontend/task3-copy/index.html
@@ -76,12 +76,12 @@
                     <nav
                         class=" d-flex navbar navbar-expand-sm d-lg-flex justify-content-lg-end justify-content-md-end col-sm-12 navbar-expand-lg">
                         <ul class=" navbar-nav">
-                            <li class="nav-item dropdown">
+                            <li class="navid nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     About
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <ul class="pt-3 dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="#">About us</a></li>
                                     <li><a class="dropdown-item" href="#">Clients</a></li>
                                     <li><a class="dropdown-item" href="#">Team</a></li>
@@ -113,7 +113,7 @@
                                 <img src="./assets/asset 2.png" alt="loading" width="50px" class="btn "
                                     data-bs-toggle="modal" data-bs-target="#exampleModal">
 
-                                </button>
+
                             </li>
                         </ul>
                     </nav>
@@ -127,88 +127,129 @@
         aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog col-6 ">
             <div class="modal-content ">
-                <div class=" modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
+
                 <div class="col-12">
+
                     <div class=" row">
-                        <div class="col-lg-12 p-3">
-                            <img src="./assets/asset 0.webp" alt="logo">
-                            <img class="ps-3" src="./assets/asset 1.png" alt="searchIcon">
+                        <div class=" modal-header">
+                            <div class=" col-lg-10 p-3">
+                                <img src="./assets/asset 0.webp" alt="logo">
+                                <img class="ps-3" src="./assets/asset 1.png" alt="searchIcon">
+                            </div>
+                            <div class=" col-lg-10 p-3">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
                         </div>
                         <div class="col-lg-12 d-flex justify-content-lg-center align-items-lg-end">
                             <div class="col-12 row container-fluid">
                                 <div class="col-4">
-                                    <h4 class=" text-green sessionTitle">ABOUT CORAL FUTURE</h4>
-                                    <p class="text-green">
-                                        We harness the power of business to create a more sustainable world. We have
-                                        more
-                                        than 15 years' experience working on sustainability and carbon credits
-                                        solutions.
+                                    <div class="col-lg-12">
+
+                                        <h4 class=" text-green sessionTitle">ABOUT CORAL FUTURE</h4>
+                                        <p class="text-green">
+                                            We harness the power of business to create a more sustainable world. We have
+                                            more
+                                            than 15 years' experience working on sustainability and carbon credits
+                                            solutions.
+                                    </div>
                                     </p>
                                     <p></p>
-                                    <ul class=" list-group ">
+                                    <div class="col-lg-12 mt-lg-5">
 
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">About Us</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Clients</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Team</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Careers</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Contact</a>
-                                        </li>
-                                    </ul>
+                                        <ul class=" list-group ">
+
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">About
+                                                    Us</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Clients</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Team</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Careers</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col-4">
-                                    <h4 class=" text-green sessionTitle">SERVICES</h4>
-                                    <p class="text-green">To us, being a good advisor and a good solutions provider are
-                                        one and the same.
-                                    </p>
-                                    <p></p>
-                                    <ul class="list-group">
+                                    <div class="col-lg-12">
 
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Overview</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Corporate
-                                                Sustainability</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon
-                                                Credits</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">RECs</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Impact
-                                                Projects</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon
-                                                Footprinting</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Scope 3
-                                                Emissions</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Insettings</a>
-                                        </li>
-                                    </ul>
+                                        <h4 class=" text-green sessionTitle">SERVICES</h4>
+                                        <p class="text-green">To us, being a good advisor and a good solutions provider
+                                            are
+                                            one and the same.
+                                        </p>
+                                    </div>
+                                    <p></p>
+                                    <div class="col-lg-12 mt-lg-5">
+
+                                        <ul class="list-group">
+
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Overview</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Corporate
+                                                    Sustainability</a></li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon
+                                                    Credits</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">RECs</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Impact
+                                                    Projects</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon
+                                                    Footprinting</a></li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Scope 3
+                                                    Emissions</a></li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Insettings</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col-4">
-                                    <h4 class="text-green">INITIATIVES</h4>
-                                    <p class="text-green">To help you make informed decisions, here is an overview of
-                                        how other climate
-                                        initiatives are relevant to our work</p>
-                                    <p></p>
-                                    <ul class="list-group">
+                                    <div class=" col-lg-12">
+                                        <h4 class="text-green">INITIATIVES</h4>
+                                        <p class="text-green">To help you make informed decisions, here is an overview
+                                            of
+                                            how other climate
+                                            initiatives are relevant to our work</p>
+                                        <p></p>
+                                    </div>
+                                    <div class="col-lg-12 mt-lg-5">
 
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Overview</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Net-Zero</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon &</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">RECs</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Standards</a>
-                                        </li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">RE100</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">CDP</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">SBTi</a></li>
-                                        <li class="list-group-item Arimo "><a href="#" class="spanABlack">Blog</a></li>
-                                    </ul>
+                                        <ul class="list-group">
+
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Overview</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Net-Zero</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Carbon
+                                                    &</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">RECs</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#"
+                                                    class="spanABlack">Standards</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">RE100</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">CDP</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">SBTi</a>
+                                            </li>
+                                            <li class="list-group-item Arimo "><a href="#" class="spanABlack">Blog</a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -592,8 +633,12 @@
 
 
 
-                <div
-                    class="nm d-lg-flex d-md-flex  container-fluid justify-content-lg-around justify-content-md-around align-content-md-center align-content-end">
+                <div style="
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    transform: translatey(-33.8%);"
+                    class="position-absolute nm d-lg-flex d-md-flex  container-fluid justify-content-lg-around justify-content-md-around align-content-md-center align-content-end">
                     <div class="card col-lg-3  p-0  text-start" style="width: 18vw;top: 4.2rem">
                         <img alt="card-img" class="card-img-top" src="./assets/asset 11.png">
                         <div class="card-body"><a href="#" class="  spanP">
